<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/app_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginBottom="20px">
    </TextView>
    <TextView
        android:text="@string/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginBottom="20px">
    </TextView>
    <TextView
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginBottom="20px">
    </TextView>
    <TextView
        android:text="@string/help_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginBottom="20px">
    </TextView>
    <TextView
        android:text="@string/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginBottom="20px">
    </TextView>
    <TextView
        android:text="@string/copyright_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginBottom="20px">
    </TextView>

</LinearLayout>